--- a/Графический редактор/Графический редактор.csproj
+++ b/Графический редактор/Графический редактор.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Layer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToolSettings.cs" />
     <EmbeddedResource Include="CreatePictureDialog.resx">
       <DependentUpon>CreatePictureDialog.cs</DependentUpon>
     </EmbeddedResource>
