--- a/Графический редактор/Графический редактор.csproj
+++ b/Графический редактор/Графический редактор.csproj
@@ -32,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="CtrLibrary">
       <HintPath>Libraries\CtrLibrary.dll</HintPath>
@@ -103,9 +104,6 @@
     <None Include="Resources\changeW.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Logo.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\Logo2.png" />
   </ItemGroup>
   <ItemGroup>
@@ -133,12 +131,6 @@
     <None Include="Resources\Collapse.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\paint-brush.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\eraser.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\sterka.png" />
   </ItemGroup>
   <ItemGroup>
@@ -149,6 +141,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\crop_tool.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\square-shape.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\line.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ellipse.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\polygon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\squareShape.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
