--- a/Графический редактор/Графический редактор.csproj
+++ b/Графический редактор/Графический редактор.csproj
@@ -57,6 +57,7 @@
     <Compile Include="CreatePictureDialog.Designer.cs">
       <DependentUpon>CreatePictureDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Drawing.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
