--- a/Графический редактор/Графический редактор.csproj
+++ b/Графический редактор/Графический редактор.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -51,11 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Canvas.cs" />
-    <Compile Include="CreatePictureDialog.cs">
+    <Compile Include="SizePictureDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CreatePictureDialog.Designer.cs">
-      <DependentUpon>CreatePictureDialog.cs</DependentUpon>
+    <Compile Include="SizePictureDialog.Designer.cs">
+      <DependentUpon>SizePictureDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Drawing.cs" />
     <Compile Include="Form1.cs">
@@ -69,8 +70,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToolSettings.cs" />
-    <EmbeddedResource Include="CreatePictureDialog.resx">
-      <DependentUpon>CreatePictureDialog.cs</DependentUpon>
+    <EmbeddedResource Include="SizePictureDialog.resx">
+      <DependentUpon>SizePictureDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
